# STripper

./: .gitmodules  CMakeLists.txt  Makefile  anim2.c  anim3.c  bitplane.c  bitplane.h  cli.c  decode.c  decomp.c  decomp.h  dkc2_decomp.c  dkc2_decomp.h  dkc2_gba.c  dkc_gba.c  dkc_gbc.c  dkl.c  gba_misc.c  gba_misc.h  gtk.c  jc.c  kos.c  level1.c  level2.c  level3.c  level3_v2.c  main.c  main.h  makefile  meson.build  misc.c  misc.h  png.c  raw_bit2.c  raw_bit3.c  readme.md  rom.h  spec1.c  spec2.c  spec2_v2.c  (+2 more)
src/: CMakeLists.txt  anim2.c  anim3.c  bitplane.c  bitplane.h  cli.c  dkc2_decomp.c  dkc2_decomp.h  dkc2_gba.c  dkc_gba.c  dkc_gbc.c  dkl.c  gba_misc.c  gba_misc.h  gtk.c  gui.h  jc.c  kos.c  level1.c  level2.c  level3.c  main.h  meson.build  misc.c  misc.h  panel.c  panel.h  png.c  raw_bit2.c  raw_bit3.c  rom.c  rom.h  spec1.c  spec2.c  spec3.c  win.c  win.rc
